<resources>
    <string name="app_name">Chili (driver)</string>
    <string name="map_key"></string>
    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone number</string>
    <string name="are_you_have_account">Have an account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="confirmation_code">Verification code</string>
    <string name="enter_verification_code_sent_to">Enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="user_blocked">User is blocked</string>
    <string name="name">Name</string>
    <string name="user_exist">Email is exist</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="offers">Offers</string>
    <string name="chats">Chats</string>
    <string name="no_conversations_to_show">No conversations to show</string>
    <string name="add_ads">Add ads</string>
    <string name="my_ads">My Ads</string>
    <string name="favorite">Favorite</string>
    <string name="commission">Commission</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search...</string>
    <string name="sar">SAR</string>
    <string name="latest_offers">Latest offers</string>
    <string name="departments">Departments</string>
    <string name="coupons">Coupons</string>
    <string name="photo_sent">Photo sent</string>
    <string name="no_image">No image</string>
    <string name="ad_details">Ad details</string>
    <string name="price">Price</string>
    <string name="copied">Copied</string>
    <string name="ad_name">Ad name</string>
    <string name="upload_video">Upload video</string>
    <string name="ad_price">Price</string>
    <string name="address">Address</string>
    <string name="ch_types">Choose types</string>
    <string name="ch_ad_image">Choose ad images</string>
    <string name="ch_dept">Choose department</string>
    <string name="ch_sub_dept">Choose Sub department</string>
    <string name="vid_pem_denied">Video permission denied</string>
    <string name="max_ad_photo">maximum 5 photos</string>
    <string name="length_video_shouldnot_exceed">Length of video shouldn\'t exceed 59 seconds</string>
    <string name="add_offer">Add offer</string>
    <string name="price_after_offer">Price after offer</string>
    <string name="offer_value">Offer value</string>
    <string name="inv_value">Invalid value</string>
    <string name="coupon_name">Coupon name</string>
    <string name="brand_name">Brand name</string>
    <string name="coupon_code">Coupon code</string>
    <string name="coupon_date">Coupon date</string>
    <string name="show">Show</string>
    <string name="ch_image">Choose image</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="my_coupons">My Coupons</string>
    <string name="select">Select</string>
    <string name="suc">Success!</string>
    <string name="coupon_valid">Coupon valid?</string>
    <string name="already_read">Accept terms and conditions</string>
    <string name="done">Done</string>
    <string name="accept_terms">Accept terms and conditions</string>
    <string name="ad_price2">Ad price</string>
    <string name="result">Result</string>
    <string name="commission_calculator">Commission calculator</string>
    <string name="if_it_is_sold_at_a_price_of">If it is sold at a price of</string>
    <string name="the_amount_owed_to_payment_is">the amount owed to payment is</string>
    <string name="details">Details</string>
    <string name="the_site_commission">The site commission from the commodity price is 1%</string>
    <string name="delete">Delete</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="general_settings">General Settings</string>
    <string name="change_language">Change language</string>
    <string name="next">Next</string>
    <string name="type_a_message">Type a message...</string>
    <string name="chat_us">Chat us</string>
    <string name="chat_with_admin">Chat with admin</string>
    <string name="social_media">Follow us on social media</string>
    <string name="inv_url">Invalid url</string>
    <string name="admin">Admin</string>
    <string name="update_profile">Update profile</string>
    <string name="image_uploded">image uploaded</string>
    <string name="follow">Follow</string>
    <string name="last_seen">Last seen</string>
    <string name="date_of_join">Date of join</string>
    <string name="unfollow">UnFollow</string>
    <string name="paid_once">Paid once</string>
    <string name="not_paid">Not paid</string>
    <string name="paid_more_than_one">Paid more than one</string>
    <string name="my_auction">My Auction</string>
    <string name="no_slider_images">No slider images</string>
    <string name="my_bids">My Bids</string>
    <string name="personal_information">Personal information</string>
    <string name="add_auction">Add Auction</string>
    <string name="title">Title</string>
    <string name="type_here">Type here...</string>
    <string name="starting_price">Starting price</string>
    <string name="donor_s_association">Donor\'s association</string>
    <string name="ch_charity">Choose charity</string>
    <string name="current_price">Current price</string>
    <string name="day">D</string>
    <string name="hour">H</string>
    <string name="minute">M</string>
    <string name="bidders">Bidders</string>
    <string name="add_a_bid">Add a bid</string>
    <string name="amount">Amount</string>
    <string name="services_rate">Services rate</string>
    <string name="password">Password</string>
    <string name="no_account">Register your restaurant </string>
    <string name="from_here">from Here</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="pass_short">Password is short</string>
    <string name="i_have_account">I already have an account</string>
    <string name="no_data_show">No Data To Show</string>
    <string name="orders">Orders</string>
    <string name="total_orders">Total Orders</string>
    <string name="finshied">Finshied</string>
    <string name="remmeing">Remmeing</string>
    <string name="order_num">Order Num :</string>
    <string name="start">Start :</string>
    <string name="finish">Finish</string>
    <string name="one_order_time">One Order Time</string>
    <string name="edit">Edit</string>
    <string name="day_order_num">Day Order Num</string>
    <string name="restore">Restore</string>
    <string name="please_scan_the_code_in_front_of_you">Please Scan the code in front of you</string>
    <string name="empinvaild">Email Or Passwored Incorrect</string>
    <string name="resnofound">Restaurant Not Found</string>
    <string name="complete_setting">Complete Restaurant Setting</string>
    <string name="order_id_invaild">Order Id Not Found</string>
    <string name="bar_code_invaild">BarCode NotFound</string>
    <string name="bar_code_image_invaild">BarCode Image Invaild</string>
    <string name="delte_suc">Deleted Sucessfuly</string>
    <string name="select_time">Select Time</string>
    <string name="min1">1 Minute</string>
    <string name="min2">2 Minute</string>
    <string name="min3">3 Minute</string>
    <string name="min4">4 Minute</string>
    <string name="min5">5 Minute</string>
    <string name="min6">6 Minute</string>
    <string name="min7">7 Minute</string>
    <string name="min8">8 Minute</string>
    <string name="min9">9 Minute</string>
    <string name="min10">10 Minute</string>
    <string name="min11">11 Minute</string>
    <string name="min12">12 Minute</string>
    <string name="min13">13 Minute</string>
    <string name="min14">14 Minute</string>
    <string name="min15">15 Minute</string>
    <string name="min16">16 Minute</string>
    <string name="min17">17 Minute</string>
    <string name="min18">18 Minute</string>
    <string name="min19">19 Minute</string>
    <string name="min20">20 Minute</string>
    <string name="min21">21 Minute</string>
    <string name="min22">22 Minute</string>
    <string name="min23">23 Minute</string>
    <string name="min24">24 Minute</string>
    <string name="min25">25 Minute</string>
    <string name="min26">26 Minute</string>
    <string name="min27">27 Minute</string>
    <string name="min28">28 Minute</string>
    <string name="min29">29 Minute</string>
    <string name="min30">30 Minute</string>
    <string name="min31">31 Minute</string>
    <string name="min32">32 Minute</string>
    <string name="min33">33 Minute</string>
    <string name="min34">34 Minute</string>
    <string name="min35">35 Minute</string>
    <string name="min36">36 Minute</string>
    <string name="min37">37 Minute</string>
    <string name="min38">38 Minute</string>
    <string name="min39">39 Minute</string>
    <string name="min40">40 Minute</string>
    <string name="min41">41 Minute</string>
    <string name="min42">42 Minute</string>
    <string name="min43">43 Minute</string>
    <string name="min44">44 Minute</string>
    <string name="min45">45 Minute</string>
    <string name="min46">46 Minute</string>
    <string name="min47">47 Minute</string>
    <string name="min48">48 Minute</string>
    <string name="min49">49 Minute</string>
    <string name="min50">50 Minute</string>
    <string name="min51">51 Minute</string>
    <string name="min52">52 Minute</string>
    <string name="min53">53 Minute</string>
    <string name="min54">54 Minute</string>
    <string name="min55">55 Minute</string>
    <string name="min56">56 Minute</string>
    <string name="min57">57 Minute</string>
    <string name="min58">58 Minute</string>
    <string name="min59">59 Minute</string>
    <string name="min60">60 Minute</string>
</resources>