<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <data>
        <variable
            name="model"
            type="com.chili_driver.models.OrderModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageClose"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_close"
                app:tint="@color/colorPrimary" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_qr"
                app:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/please_scan_the_code_in_front_of_you"
                android:textColor="@color/gray8"
                android:textSize="10sp"
                android:textStyle="bold"
                android:minLines="2"

                />
        </LinearLayout>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_qr"
            android:layout_marginTop="10dp"
            image="@{model.barcode_image}"

          />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:singleLine="true"
                    android:text="@string/order_num"
                    android:textColor="@color/gray8"
                    android:textSize="14sp" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:singleLine="true"
                android:text='@{"#"+model.order_num}'

                android:textColor="@color/black_trans"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_clock"
                app:tint="@color/colorPrimary"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/gray8"
                android:text="@string/wait"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"
            android:text="20"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnconfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/small_rounded_primary"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/confirm"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                />
        <Button
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/small_rounded_stroke_gray"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:text="@string/skip"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"

            />
    </LinearLayout>
</layout>
