<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="com.chili_driver.models.LoginModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:background="@drawable/signup_back"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo"
                android:visibility="invisible"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="80dp"

                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textDirection="rtl"

                    >


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_login_back"
                        android:layout_marginLeft="150dp"


                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:text="@string/login"
                        android:textStyle="bold"
                        android:paddingStart="100dp"
                        android:paddingEnd="100dp"
                        android:gravity="right|center_vertical"
                        android:textDirection="rtl"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:ignore="RtlHardcoded" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:text="@string/login"
                    android:textStyle="bold"
                   android:paddingStart="100dp"
                    android:paddingEnd="100dp"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/rounded_stroke_gray"
                app:hintEnabled="false"
                app:startIconTint="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_mail"

                >
                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:text="@={model.email}"
                    error="@{model.error_email}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_stroke_gray"
                app:hintEnabled="false"
                app:startIconTint="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_lock"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"


                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:hint="@string/password"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:text="@={model.password}"
                    error="@{model.error_password}"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            </FrameLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="40dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"

                android:textSize="18sp"
                android:text="@string/login"
                android:background="@drawable/small_rounded_primary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/no_account"
                    />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/from_here"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_login_bottom"
                android:visibility="gone"
                android:layout_gravity="center|bottom"/>

        </LinearLayout>

    </ScrollView>
</layout>
