<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.chili_driver.models.OrderModel" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/image"

                image="@{model.barcode_image}"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_qr"
                android:transitionName="image"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="3dp"
                tools:ignore="UnusedAttribute" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:singleLine="true"
                            android:text="@string/order_num"
                            android:textColor="@color/gray8"
                            android:textSize="14sp" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:singleLine="true"
                        android:text='@{"#"+model.order_num}'

                        android:textColor="@color/black_trans"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:singleLine="true"
                            android:text="@string/start"
                            android:textColor="@color/gray8"
                            android:textSize="14sp" />
                    </FrameLayout>

                    <TextView
                        date2="@{model.start_time_at}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black_trans"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray7" />

            <Button
                android:id="@+id/btnfinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/small_rounded_btn_memory_selected"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/finish"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>